I'm going to commit now